# bookscout

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  AGENTS.md  LICENSE  README.md  config.yaml  eslint.config.mts  mkdocs.yml  mypy.ini  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini
.claude/: .gitignore  settings.json
.claude/skills/bookscout/: SKILL.md
.husky/: pre-commit
docs/assets/javascripts/: extra.js
docs/assets/stylesheets/: extra.css
docs/reference/: SUMMARY.md  index.md
docs/superpowers/plans/: 2026-07-08-optional-indexes-plan.md  2026-07-10-bookscout-tui-optimization-plan.md  2026-07-10-index-provider-explicit-context.md  2026-07-18-core-hardening.md
docs/superpowers/specs/: 2026-07-08-optional-indexes-design.md  2026-07-08-tui-command-system-design.md  2026-07-10-bookscout-tui-optimization-design.md  2026-07-10-index-provider-explicit-context-design.md  2026-07-18-core-hardening-design.md  filestore-cas-sqlite.md
electron/: electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
electron/src/main/: index.ts  python-process.ts
electron/src/preload/: index.ts
electron/src/renderer/: App.tsx
electron/src/renderer/api/: ws-client.ts
electron/src/renderer/components/: AssistantMessage.tsx  ChatPanel.tsx  InputArea.tsx  MessageList.tsx  Sidebar.tsx  StatusIndicator.tsx  ToolCallCard.tsx  UserMessage.tsx
electron/src/renderer/hooks/: useChatStore.ts
electron/src/renderer/styles/: global.css  theme.ts
electron/src/shared/: types.ts
plugins/: README.md
plugins/bookscout-skills/search/: SKILL.md
plugins/claude-code/: README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: hooks.json
plugins/codex/: .mcp.json  README.md
plugins/codex/.codex-plugin/: plugin.json
plugins/codex/skills/read/: SKILL.md
plugins/hermes/: README.md  mcp-config.yaml
plugins/openclaw/: README.md  index.cjs  package.json
plugins/pi/: README.md  index.ts  package.json
python/bookscout-agents/: README.md  pyproject.toml
python/bookscout-agents/bookscout/agents/: __init__.py  agent.py  agenttool.py  context.py  exceptions.py  mode.py  mode_agent.py  scheduling.py
python/bookscout-agents/bookscout/agents/agent/: __init__.py
python/bookscout-agents/bookscout/agents/mode/: __init__.py
python/bookscout-agents/bookscout/agents/reading/: __init__.py  agent.py  config.py  mode.py  session.py  toolset.py
python/bookscout-agents/bookscout/agents/tool/: __init__.py
python/bookscout-books/: README.md  pyproject.toml
python/bookscout-core/: README.md  pyproject.toml
python/bookscout-doccompiler/: README.md  pyproject.toml
python/bookscout-doccompiler/bookscout/doccompiler/: __init__.py  cli.py  compiler.py  index_provider.py  index_registry.py  models.py  task_manager.py  tools.py  types.py  workspace.py
python/bookscout-doccompiler/bookscout/doccompiler/builder/: __init__.py  llm_tool.py  metadata.py  rule.py  tagify.py
python/bookscout-doccompiler/bookscout/doccompiler/indexer/: __init__.py
python/bookscout-doccompiler/bookscout/doccompiler/parser/: __init__.py
python/bookscout-doccompiler/bookscout/doccompiler/parser/epub/: __init__.py  mapping_store.py
python/bookscout-doccompiler/bookscout/doccompiler/parser/pdf/: __init__.py  mapping_store.py  mineru_client.py  mineruapi.py
python/bookscout-embedding/: README.md  pyproject.toml
python/bookscout-embedding/bookscout/embedding/: __init__.py  openai.py
python/bookscout-filestore/: README.md  pyproject.toml
python/bookscout-index-chunk/: README.md  pyproject.toml
python/bookscout-index-graph/: README.md  pyproject.toml
python/bookscout-index-summary/: README.md  pyproject.toml
python/bookscout-index-summary/bookscout/index/summary/: __init__.py  models.py  provider.py  tools.py
python/bookscout-llm/: README.md  pyproject.toml
python/bookscout-llm/bookscout/llm/: __init__.py  anthropic.py  config.py  exceptions.py  openai.py  rate_limiter.py  types.py
python/bookscout-llm/bookscout/llm/store/: __init__.py  conversation.py  file.py
python/bookscout-logging/: README.md  pyproject.toml
python/bookscout-logging/bookscout/logging/: __init__.py  config.py  mixin.py  record.py  schema.py  sink.py  types.py  writer.py
python/bookscout-mcp/: README.md  pyproject.toml
python/bookscout-mcp/bookscout/mcp/: __init__.py  __main__.py  config.py  context.py  stdio.py
python/bookscout-progress/: README.md  pyproject.toml
python/bookscout-progress/bookscout/progress/: __init__.py  monitor.py  null_scope.py  renderers.py  rich_renderer.py  schema.py  sink.py
python/bookscout-repl/: README.md  config.example.yaml  pyproject.toml
python/bookscout-repl/bookscout/repl/: __init__.py  __main__.py  config.py  context.py  prompt_builder.py  server.py  session_manager.py  setup.py  simple_tui.py  skill_loader.py  transport.py  tui.py  tui_textual.py  types.py  ws_server.py
python/bookscout-sqlite/: README.md  pyproject.toml
python/bookscout-sqlite/bookscout/sqlite/: __init__.py  exceptions.py
python/bookscout-tools/: README.md  pyproject.toml
python/bookscout-tools/bookscout/tools/: __init__.py  computation.py  mcp_client.py  mcp_toolset.py  skill_fetch.py  toolset.py
python/bookscout-tools/bookscout/tools/mcp/: __init__.py  config.py  exceptions.py  session.py  tool.py
python/bookscout-vectorstore/: README.md  pyproject.toml
python/tests/: conftest.py  test_books.py  test_doccompiler.py  test_filestore.py  test_index_manifest.py  test_index_registry.py  test_indexes.py  test_logging.py  test_mcp_toolset.py  test_rate_limiter.py  test_reading_agent.py  test_session_manager.py  test_skill_system.py  test_tools_computation.py  test_tui_commands.py
scripts/: __init__.py  __main__.py  bump.py  dev.py
scripts/_helpers/: __init__.py  console.py  git.py  ns.py  templates.py  workspace.py
scripts/docs/: __init__.py  __main__.py  build.py  gen.py  serve.py
scripts/package/: __main__.py  build.py  list.py  new.py  remove.py
(+168 files in other folders)
