[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "bookscout"
version = "0.2.0"
description = "BookScout — interactive book reading assistant"
readme = "README.md"
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "bookscout-agents",
  "bookscout-books",
  "bookscout-core",
  "bookscout-doccompiler",
  "bookscout-embedding",
  "bookscout-filestore",
  "bookscout-index-chunk",
  "bookscout-index-graph",
  "bookscout-index-summary",
  "bookscout-llm",
  "bookscout-logging",
  "bookscout-mcp",
  "bookscout-repl",
  "bookscout-sqlite",
  "bookscout-tools",
  "colorama>=0.4.6",
  "halo>=0.0.31",
  "mkdocs>=1.6.1",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-material>=9.7.6",
  "mkdocs-section-index>=0.3",
  "mkdocs-static-i18n>=1.3",
  "mkdocstrings[python]>=0.29",
  "bookscout-progress",
  "mypy>=2.1",
  "orjson>=3.11.9",
  "pre-commit>=4.6",
  "pydantic>=2.13.4",
  "pylint>=4.0.6",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4",
  "rich>=13",
  "ruff>=0.15.20",
  "typer>=0.26.8",
]
scripts.bookscout = "scripts.__main__:main"

scripts.bookscout-dev = "scripts.dev:main"

scripts.bs = "scripts.dev:main"
[tool.setuptools.packages.find]
include = [ "scripts", "scripts.*" ]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
  "python/bookscout-agents",
  "python/bookscout-books",
  "python/bookscout-core",
  "python/bookscout-doccompiler",
  "python/bookscout-embedding",
  "python/bookscout-filestore",
  "python/bookscout-llm",
  "python/bookscout-logging",
  "python/bookscout-repl",
  "python/bookscout-sqlite",
  "python/bookscout-tools",
  "python/bookscout-vectorstore",
  "python/bookscout-index-summary",
  "python/bookscout-index-chunk",
  "python/bookscout-index-graph",
  "python/bookscout-mcp",
  "python/bookscout-progress",
]

[tool.uv.sources]
bookscout-progress = { workspace = true }
bookscout-index-graph = { workspace = true }
bookscout-index-chunk = { workspace = true }
bookscout-index-summary = { workspace = true }
bookscout-books = { workspace = true }
bookscout-core = { workspace = true }
bookscout-doccompiler = { workspace = true }
bookscout-vectorstore = { workspace = true }
bookscout-llm = { workspace = true }
bookscout-filestore = { workspace = true }
bookscout-embedding = { workspace = true }
bookscout-sqlite = { workspace = true }
bookscout-logging = { workspace = true }
bookscout-tools = { workspace = true }
bookscout-agents = { workspace = true }
bookscout-mcp = { workspace = true }
bookscout-repl = { workspace = true }
