[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68",
  "wheel",
]

[project]
name = "bookscout-doccompiler"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "BoChen SHEN", email = "6goddddddd@gmail.com" },
]
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiofiles>=25.1",
  "bookscout-books",
  "bookscout-core",
  "bookscout-filestore",
  "bookscout-logging",
  "bookscout-sqlite",
  "bookscout-tools",
  "ebooklib>=0.18",
  "httpx>=0.28.1",
  "lxml>=5.3",
  "pypdf>=5.1",
  "python-dotenv>=1.1",
  "sqlmodel>=0.0.39",
]

optional-dependencies.cli = [
  "rich>=13",
  "typer>=0.26.8",
]
optional-dependencies.llm = [
  "bookscout-llm",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "bookscout.doccompiler*" ]

[tool.setuptools.exclude-package-data]
"*" = [
  "**/.ruff_cache/**",
  "**/__pycache__/**",
  "**/*.pyc",
  "**/.mypy_cache/**",
  "**/.pytest_cache/**",
  "**/*.egg-info/**",
  "**/build/**",
  "**/dist/**",
]

[tool.uv.sources]
bookscout-books = { workspace = true }
bookscout-core = { workspace = true }
bookscout-filestore = { workspace = true }
bookscout-llm = { workspace = true }
bookscout-logging = { workspace = true }
bookscout-sqlite = { workspace = true }
bookscout-tools = { workspace = true }
