[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68",
  "wheel",
]

[project]
name = "bookscout-index-summary"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "BoChen SHEN", email = "6goddddddd@gmail.com" },
]
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "bookscout-core",
  "bookscout-doccompiler",
  "bookscout-logging",
  "bookscout-sqlite",
  "bookscout-tools",
  "sqlmodel>=0.0.39",
]

[project.entry-points."bookscout.indexes"]
summary = "bookscout.index.summary.provider:INDEX_PROVIDER"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "bookscout.index.summary*" ]

[tool.setuptools.exclude-package-data]
"*" = [
  "**/.ruff_cache/**",
  "**/__pycache__/**",
  "**/*.pyc",
  "**/.mypy_cache/**",
  "**/.pytest_cache/**",
  "**/*.egg-info/**",
  "**/build/**",
  "**/dist/**",
]

[tool.uv.sources]
bookscout-core = { workspace = true }
bookscout-doccompiler = { workspace = true }
bookscout-logging = { workspace = true }
bookscout-sqlite = { workspace = true }
bookscout-tools = { workspace = true }
