[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68",
  "wheel",
]

[project]
name = "bookscout-repl"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "BoChen SHEN", email = "6goddddddd@gmail.com" },
]
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "protobuf>=7.35.1",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "bookscout.repl*" ]

[tool.setuptools.exclude-package-data]
"*" = [
  "**/.ruff_cache/**",
  "**/__pycache__/**",
  "**/*.pyc",
  "**/.mypy_cache/**",
  "**/.pytest_cache/**",
  "**/*.egg-info/**",
  "**/build/**",
  "**/dist/**",
]
